[build-system]
requires=["setuptools>=61.0"]
build-backend="setuptools.build_meta"
[project]
name = "surveytool_BMaxV"
version = 0.5
authors = {name = "Bruno Maximilian Voß", email = "bruno.m.voss@gmail.com"}
description = "a simple survey tool, with tkinter support"
readme = "README.md"
requries-python =">=3.5"

